# Image-Processor

./: CMakeLists.txt  anaglyph3D_filter.cpp  anaglyph3D_filter.h  base_filter.cpp  base_filter.h  crop_filter.cpp  crop_filter.h  edge_detection_filter.cpp  edge_detection_filter.h  gaussian_blur_filter.cpp  gaussian_blur_filter.h  grayscale_filter.cpp  grayscale_filter.h  image.cpp  image.h  image_processor.cpp  negative_filter.cpp  negative_filter.h  programme.cpp  programme.h  project_exception.h  sharpening_filter.cpp  sharpening_filter.h  test.cpp
